Bugfix/UGP-9959 Fixing pipe spacing and colors

--- a/blocks/article-metadata-appliesto/article-metadata-appliesto.css
+++ b/blocks/article-metadata-appliesto/article-metadata-appliesto.css
@@ -13,8 +13,9 @@
 }
 
 .article-metadata-appliesto li + li:not(:last-child)::after {
+  font-size: 12px;
   content: ' |';
-  margin-left: 0.75em;
+  margin-left: 0.5em;
 }
 
 .article-metadata-appliesto li:first-child {
